--- a/tui/package.json
+++ b/tui/package.json
@@ -42,6 +42,7 @@
     "jest": "^27.0.5",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "tailwindcss": "^3.1.8",
     "ts-jest": "^27.0.4",
     "typescript": "~4.5.5"
   }
